@@ -1,5 +1,5 @@
 /*
- * $Id: save.h,v 1.8 2004/07/13 14:11:24 broeker Exp $
+ * $Id: save.h,v 1.9 2004/07/30 16:09:56 broeker Exp $
  */
 
 /* GNUPLOT - save.h */
@@ -55,6 +55,7 @@ void save_set __PROTO((FILE *fp));
 void save_term __PROTO((FILE *fp));
 void save_all __PROTO((FILE *fp));
 void save_range __PROTO((FILE *, AXIS_INDEX));
+void save_textcolor __PROTO((FILE *, const struct t_colorspec *));
 void save_data_func_style __PROTO((FILE *, const char *, enum PLOT_STYLE));
 
 #endif /* GNUPLOT_SAVE_H */
